--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "node",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "ejercicios.js",
   "scripts": {
-    "dev": "nodemon app.js"
+    "dev": "nodemon ejercicios.js"
   },
   "keywords": [],
   "author": "",
